--- a/style.css
+++ b/style.css
@@ -1,101 +1,121 @@
-*{
-    margin: 0%;
-    padding: 0%;
-}
-
-.header {
-    height: 20vh;
-    width: 100%;
-    background-color: #1E202B;
-    color: rgb(220, 225, 245);   
-}
-.navbar-brand {
-    font-size: 30px;   
-}
-.navbar-nav {   
-    margin-left: 600px;
-    font-weight: 900;
-}
-.nav-item {
-   display: flex;
-   justify-content: space-around; 
-}
 .home {
+    text-align: center;
+    background-image: url(./images/underground-concert.jpg);
+    background-size: cover;
+    height: 100vh;
+    position: relative;
+}
+.data {
+    height: 100vh;
+    background-color: tomato;
+    opacity: 0.6;
+}
+.data h1{ 
+   padding-top: 300px;
+   color: antiquewhite;
+   font-weight: 900;
+   font-size: 64px;
+}
+.data h6 {
+    color: antiquewhite;
+    font-weight: 400;
+    font-size: x-large;
+}
+.settings {
+    top: 0;
+    left: 0;
+    height: 100vh;
+   
+    position: absolute;
+    display: flex;
+    z-index: 9999;  
+}
+.settings h3 {
+    padding: 30px;
+    color: azure;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.settings .open {
+    display: none;
+    background-color: black;
+}
+.settings h3:hover{
+   background-color: brown;
+}
+.sigth {
+opacity: 0.8;
+padding: 10px;
+cursor: pointer;
+padding-top: 250px;
+}
+.contact {
+    height: 100vh;
+    background-color: beige;
+}
+.container {
+    padding-top: 40px;
+    padding-left: 80px;
+}
+.container h2,.container h3 {
+    font-weight: 700;
+    padding-top: 40px;
+}
+.contact-ways {
+    padding-left: 70px;
+}
+.allinputs {
+    margin-top: 150px;
+}
+textarea {
+    border: none;
+}
+.icons :hover {
+    background-color: aquamarine;
+}
+.singer {
+    text-align: center;
     padding-top: 50px;
-    height: 80vh;
-    background-image: url(./images/singapore-1990959_1280.jpg);
-    background-size: 100% 100%;
+    height: 90vh;
+    cursor: pointer;
 }
-.home input {
-    
-    margin: auto;
-    border-radius: 10px;
-    background-color: #1E202B;
+#lorem1,#lorem2,#lorem3,#lorem4{
+    display: none;
+}
+.singer1 ,.singer2,.singer3,.singer4 {
+    padding: 15px;
+    width: 50%;
+    margin-left: 260px;
+}
+.time {
+    height: 40vh;
+    background-image: url(./images/contact-us-iphone.jpg);
+    background-size: cover;
+}
+.date {
+    background-color: tomato;
+    opacity: 0.6;
+    height: 40vh;
+}
+.col-3{
+    border: 1px solid white;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+.date {
+    display: flex;
+   
+}
+.days,.hours,.minutes {
+    padding: 80px 150px;
     text-align: center;
-    color: aqua;
+    font-weight: 900;
+    font-size: 32px;
+     color: blueviolet;
 }
-.days {
-    padding-top: 50px;
-    
-}
-.card {
-    background-color: #323544;
-    color: white;
-}
-.card2 {
-    background-color: #32354491;
-}
-footer {
-    padding-top: 30px;
-    text-align: center;
-    background-color: #323544;
-    height: 20vh;
-}
-footer .form-control {
-    background-color: #1e202b10;
-    text-align: center;
-    margin-left: 50px;
-}
-p {
-    color: beige;
-    padding-top: 10px;
-    text-align: center;
-}
-.card-title {
+.spann {
     color: crimson;
-    font-weight: 900;  
-    padding-left: 0%;
 }
-#number{
-    font-weight: 200;
-    color: chocolate;
-    padding-bottom: 20px;
-}
-#sunny {
-    font-weight: 100;
-    color: aqua;
-}
-#percentage,#speed,#direction {
-    padding-right: 40px;
-    color: darkgray;
-    font-weight: 200;
-}
-#timezone ,#days {
-    color: darkcyan;
-    padding-left: 30px;
-}
-#timezoneday2 ,#timezoneday3{
-    color: darkcyan;
-}
-#numbertemp ,#numberday3 {
-    color: chocolate;
-    font-weight: 200;
-}
-#sunnyday2 , #sunnyday3 {
-    font-weight: 100;
-    color: aqua;
-}
-#month{
-    
-    color: darkgray;
+.textarea {
+    maxle
 }
